@@ -2268,6 +2268,4 @@ bool RatingTuple::isNull() const
 void RatingTuple::setNull()
 {
     excitement = kRideRatingUndefined;
-    intensity = kRideRatingUndefined;
-    nausea = kRideRatingUndefined;
 }
